修改线程调度的方法和线程数量，提高效率